force-app/main/default/objects/fw1__Entity__c/fw1__Entity__c.object-meta.xml
<CustomObject>
    <label>Entity</label>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>