force-app/main/default/objects/fw1__Entity__c/fields/External_Payment_Center_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_Center_Id__c</fullName>
    <formula>fw1__Payment_Center_Setting__r.External_Record_Id__c</formula>
    <label>External Payment Center Id</label>
    <type>Text</type>
</CustomField>