force-app/main/default/objects/fw1__Entity__c/fields/fw1__Address__c.field-meta.xml
<CustomField>
    <fullName>fw1__Address__c</fullName>
    <label>Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>