force-app/main/default/objects/fw1__Entity__c/fields/fw1__Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>fw1__Contact_Information__c</fullName>
    <label>Contact Information</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>