force-app/main/default/objects/fw1__Entity__c/fields/fw1__Entity_Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>fw1__Entity_Email_Sender__c</fullName>
    <label>Entity Email Sender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>