force-app/main/default/objects/fw1__Entity__c/fields/fw1__Entity_Logo__c.field-meta.xml
<CustomField>
    <fullName>fw1__Entity_Logo__c</fullName>
    <inlineHelpText>Logo ID</inlineHelpText>
    <label>Entity Logo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>