force-app/main/default/objects/fw1__Entity__c/fields/fw1__Footer__c.field-meta.xml
<CustomField>
    <fullName>fw1__Footer__c</fullName>
    <label>Footer</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>