force-app/main/default/objects/fw1__Entity__c/fields/fw1__Payment_Center_Setting__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Center_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Center Setting</label>
    <referenceTo>fw1__Payment_Center_Setting__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>