force-app/main/default/objects/fw1__Entity__c/fields/fw1__Payment_Destination__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Destination__c</fullName>
    <label>Payment Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>