force-app/main/default/objects/fw1__Entity__c/fields/fw1__Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_And_Conditions__c</fullName>
    <label>Terms And Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>