force-app/main/default/objects/fw1__Entity__c/fields/Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image__c</fullName>
    <description>Used for displaying the Logo Image on the DocGen Templates</description>
    <label>Logo Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>