force-app/main/default/objects/fw1__Entity__c/fields/SCS_Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>SCS_Bank_Information__c</fullName>
    <label>SCS Bank Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>